# emitter

./: .gitignore  Cargo.toml  LICENSE  README.md  scan_state
emitter/: Cargo.toml
emitter-core/: Cargo.toml
emitter-core/src/: cell_process.rs  header_sync.rs  lib.rs  rpc_client.rs  types.rs
emitter/src/: global_state.rs  main.rs  rpc_server.rs  ws_subscription.rs
emitter/src/emit_data/: ckb_light_client_abi.rs  eth_tx.rs  image_cell_abi.rs  mod.rs  tx_data.rs
src/: cell_process.rs  global_state.rs  header_sync.rs  main.rs  rpc_client.rs  rpc_server.rs  ws_subscription.rs
src/emit_cell/: eth_tx.rs  tx_data.rs
src/emit_data/: eth_tx.rs  image_cell_abi.rs  mod.rs  tx_data.rs
