[package]
name = "emitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.108"
ckb-types = "0.108"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
jsonrpc-core = "18.0"
jsonrpsee = { version = "0.16", features = ["macros", "server"] }
dashmap = { version = "5", features = ["serde"] }
log = "0.4"
env_logger = "0.10.0"
clap = { version = "4", features = ["cargo"] }
