[package]
name = "emitter-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.110"
ckb-types = "0.110"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"], optional = true }
jsonrpc-core = "18.0"
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }
log = "0.4"

[features]
default = ["client"]
client = ["reqwest"]
