[package]
name = "emitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.16", features = ["macros", "server"] }
dashmap = { version = "5", features = ["serde"] }
log = "0.4"
env_logger = "0.10.0"
clap = { version = "4", features = ["cargo"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ckb-jsonrpc-types = "0.110"
ckb-types = "0.110"
async-trait = "0.1"

emitter-core = { path = "../emitter-core" }
